# Terraria_like

./: CMakeLists.txt
src/: Paths.h  main.cpp
src/Direction/: Direction.h
src/TextureManager/: TextureManager.h
